# digital-image-processing

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fix.yml
data/: 实验1 报告模板.docx  实验2 学生报告模板.docx  实验3 学生报告模板.docx  实验4 学生报告模板.docx  实验5 学生报告模板.docx  实验6 学生报告模板.docx  实验7-实验报告模板-卷积神经网络.docx  实验8-生成对抗网络-实验报告模板.docx  数字图像处理实验要求.docx
src/: cli.py
src/dl/: task1.py
src/dl/lab1/: task2.py  task3.py
src/dl/lab2/: task1.py  task2.py
src/scripts/: conv.py  dl.py  filter.py  freq.py  pseudocolor.py  rotate.py  scale.py  translate.py
src/utils/: frame.py  fs.py  log.py  mnist.py  read.py  show.py  torch.py
